--- a/site/example2.html
+++ b/site/example2.html
@@ -6,9 +6,9 @@
  </head>
  <body id="bigl">
     <h1>Бигли</h1> 
-    <img src="bigl-21-e1461094011121.jpg" alt="бигль" title="фото">
+    <img src="pictures/bigl-21-e1461094011121.jpg" alt="бигль" title="фото">
     <p class="description">
      У собак этой породы сильно развито обоняние, что, впрочем, неудивительно, учитывая их охотничий потенциал. Каждый пёс, выйдя на прогулку с хозяином, обязательно уткнётся носом в землю — ведь там столько всего интересного: питомцу нужно обнюхать буквально каждую травинку, каждый оставленный человеком или другими животными след. А после этого желательно найти обладателя этого следа — уж очень любопытен по характеру бигль. Поэтому во время прогулки такой «следопыт» должен быть на поводке, иначе увлечётся «розыском» и быстро скроется из виду. Эти питомцы очень активные, игривые и дружелюбные. Они легко находят общий язык как с взрослыми членами семьи, так и с детьми. Да и к незнакомцам относятся с лояльностью, в каждом из них видя потенциального друга, а не врага. </p> 
-    <a href="index.html">Узнать больше</a>
+    <a href="index.html" target="_blank">Узнать больше</a>
  </body>
  </html>
